# lab24

./: CMakeLists.txt  README.md
include/: btree.h  expr.h  expr_types.h  list.h  stack.h
src/: btree.c  expr.c  expr_types.c  list.c  main.c  stack.c
